# libpix

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  libpix.config.h.in  wc
include/: libpix.h
include/pix/: config.h  exif.hpp  filter_alpha.hpp  filter_color.hpp  filter_resize.hpp  image.hpp  image_bmp.hpp  image_jpg.hpp  image_png.hpp  image_tif.hpp  info.hpp  memory.hpp  stream.hpp  string.hpp  system.hpp  text.hpp  utils.hpp  view.hpp
src/: filter_resize.cpp  image.cpp  image_jpg.cpp  image_tif.cpp  info.cpp  inner.hpp  libpix.cpp  memory.cpp  pix.cpp  pix_buf.cpp  pix_inf.cpp  pix_obj.h  pix_stm.cpp  pix_str.cpp  stream.cpp  stream_file.cpp  stream_mem.cpp  string.cpp  system.cpp  types.cpp  utils.cpp  view.cpp
src/impl/: config.h  filter_resize.hpp  image_jpg_ijg.static.hpp  image_tif.static.hpp  info.hpp  stream_file.hpp  stream_mem.hpp  string.hpp  view_win.hpp
